XWIKI-21452: Macros info, success, warning and error are only distinguished by colors * Fixed width of the boxes fitted to content and icon alignement

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/messages.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/messages.less
@@ -15,14 +15,15 @@ span.box {
 
 // Used by: message boxes
 div.successmessage, div.errormessage, div.warningmessage, div.infomessage {
-  display: inline-grid;
+  display: grid;
   gap: .2rem .5rem;
-  align-items: center;
+  justify-content: left;
   padding-left: .5rem;
   padding-top: .5rem;
   
   & > img {
     grid-area: ~"1/1/2/2";
+    align-self: center;
   }
   
   & > .box-title {
